제목추가했어용

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Geolocation22_2.html</title>
 </head>
 <body>
+    <hw>제목 추가 했어요</hw>
     <fieldset>
         <legend>Geolocation API - 현재 위치의 갱신하기:Netlify배포 및 Github연동</legend>
         <button onclick="start();">위치 추적 시작</button>
