--- a/kakaomap.html
+++ b/kakaomap.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=718fe4453446f7ee993a152b09b9b401"></script>
     <script>
         //샘플코드
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+        var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
         var mapOption = { 
                 center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
                 level: 3 // 지도의 확대 레벨
