--- a/kakaomap.html
+++ b/kakaomap.html
@@ -20,6 +20,7 @@
     
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=718fe4453446f7ee993a152b09b9b401"></script>
     <script>
+        /*
         //샘플코드
         var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
         var mapOption = { 
@@ -27,8 +28,44 @@
                 level: 3 // 지도의 확대 레벨
         };
 
-// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-var map = new kakao.maps.Map(mapContainer, mapOption); 
+        // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+        var map = new kakao.maps.Map(mapContainer, mapOption); 
+        */
+
+        var map;
+
+        //나의 현재 위치의 위도와 경도 얻기
+        if(navigator.geolocation){//브라우저의 Geolocation 지원 여부 확인
+            
+            //PositionOptions객체 설정용]
+            var options = {timeout:3000,maxinumAge:5000};
+
+            //현재 위치 정보 딱 한번만 얻기
+            //navigator.geolocation.getCurrentPosition(function(a){},function(){},{})
+            navigator.geolocation.getCurrentPosition(successCallback);
+        }
+
+        function successCallback(position){
+            //위도 / 경도 얻기]
+            var lat = position.coords.latitude;
+            var lng = position.coords.longitude;
+            span.innerHTML="위도:"+lat+",경도:"+lng;
+
+            //div에 지도 표시하기
+            displayKaKaoMap(lat,lng);
+        }
+
+        //지도 표시 함수]
+        fucntion displayKaKaoMap(lat,lng){
+            var Container = document.getElementById('map'); // 지도를 표시할 div 
+            var Option = { 
+                center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+
+            }
+            map = new kakao.maps.Map(container,option);
+        }
+
     </script>
 </body>
 </html>
