--- a/kakaomap.html
+++ b/kakaomap.html
@@ -56,7 +56,7 @@
         }
 
         //지도 표시 함수]
-        fucntion displayKaKaoMap(lat,lng){
+        function displayKaKaoMap(lat,lng){
             var Container = document.getElementById('map'); // 지도를 표시할 div 
             var Option = { 
                 center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
